[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/victim.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/world/arena.png" type="Texture" id=2]
[ext_resource path="res://scripts/world.gd" type="Script" id=3]
[ext_resource path="res://scenes/bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/UserInput.gd" type="Script" id=5]
[ext_resource path="res://scripts/scoreTime.gd" type="Script" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=17]
0/name = "arena.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 80, 80 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=18]

[sub_resource type="Curve2D" id=19]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -160, -192, 0, 0, 0, 0, 144, -192, 0, 0, 0, 0, 144, 192, 0, 0, 0, 0, -160, 192, 0, 0, 0, 0, -160, -192 )
}

[sub_resource type="InputEventKey" id=20]
scancode = 16777221

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 20 )

[node name="world" type="Node2D"]
script = ExtResource( 3 )
Bullet = ExtResource( 4 )

[node name="background" type="ColorRect" parent="."]
margin_left = -952.669
margin_top = -496.017
margin_right = 967.331
margin_bottom = 583.983
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.0862745, 0.0431373, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="TileMap" type="TileMap" parent="StaticBody2D"]
tile_set = SubResource( 17 )
cell_size = Vector2( 16, 16 )
collision_use_parent = true
format = 1
tile_data = PoolIntArray( -786443, 0, 0, -786442, 0, 3, -786441, 0, 3, -786440, 0, 3, -786439, 0, 3, -786438, 0, 3, -786437, 0, 3, -786436, 0, 3, -786435, 0, 3, -786434, 0, 3, -786433, 0, 3, -851968, 0, 3, -851967, 0, 3, -851966, 0, 3, -851965, 0, 3, -851964, 0, 3, -851963, 0, 3, -851962, 0, 3, -851961, 0, 3, -851960, 0, 3, -851959, 0, 4, -720907, 0, 65540, -720906, 0, 196609, -720905, 0, 196609, -720904, 0, 196609, -720903, 0, 196609, -720902, 0, 196609, -720901, 0, 196609, -720900, 0, 196609, -720899, 0, 196609, -720898, 0, 196609, -720897, 0, 196609, -786432, 0, 196609, -786431, 0, 196609, -786430, 0, 196609, -786429, 0, 196609, -786428, 0, 196609, -786427, 0, 196609, -786426, 0, 196609, -786425, 0, 196609, -786424, 0, 196609, -786423, 0, 196612, -655371, 0, 65540, -655370, 0, 196609, -655369, 0, 196609, -655368, 0, 196609, -655367, 0, 196609, -655366, 0, 196609, -655365, 0, 196609, -655364, 0, 196609, -655363, 0, 196609, -655362, 0, 196609, -655361, 0, 196609, -720896, 0, 196609, -720895, 0, 196609, -720894, 0, 196609, -720893, 0, 196609, -720892, 0, 196609, -720891, 0, 196609, -720890, 0, 196609, -720889, 0, 196609, -720888, 0, 196609, -720887, 0, 196612, -589835, 0, 65540, -589834, 0, 196609, -589833, 0, 196609, -589832, 0, 196609, -589831, 0, 196609, -589830, 0, 196609, -589829, 0, 196609, -589828, 0, 196609, -589827, 0, 196609, -589826, 0, 196609, -589825, 0, 196609, -655360, 0, 196609, -655359, 0, 196609, -655358, 0, 196609, -655357, 0, 196609, -655356, 0, 196609, -655355, 0, 196609, -655354, 0, 196609, -655353, 0, 196609, -655352, 0, 196609, -655351, 0, 196612, -524299, 0, 65540, -524298, 0, 196609, -524297, 0, 196609, -524296, 0, 196609, -524295, 0, 196609, -524294, 0, 196609, -524293, 0, 196609, -524292, 0, 196609, -524291, 0, 196609, -524290, 0, 196609, -524289, 0, 196609, -589824, 0, 196609, -589823, 0, 196609, -589822, 0, 196609, -589821, 0, 196609, -589820, 0, 196609, -589819, 0, 196609, -589818, 0, 196609, -589817, 0, 196609, -589816, 0, 196609, -589815, 0, 196612, -458763, 0, 65540, -458762, 0, 196609, -458761, 0, 196609, -458760, 0, 196609, -458759, 0, 196609, -458758, 0, 196609, -458757, 0, 196609, -458756, 0, 196609, -458755, 0, 196609, -458754, 0, 196609, -458753, 0, 196609, -524288, 0, 196609, -524287, 0, 196609, -524286, 0, 196609, -524285, 0, 196609, -524284, 0, 196609, -524283, 0, 196609, -524282, 0, 196609, -524281, 0, 196609, -524280, 0, 196609, -524279, 0, 196612, -393227, 0, 65540, -393226, 0, 196609, -393225, 0, 196609, -393224, 0, 196609, -393223, 0, 196609, -393222, 0, 196609, -393221, 0, 196609, -393220, 0, 196609, -393219, 0, 196609, -393218, 0, 196609, -393217, 0, 196609, -458752, 0, 196609, -458751, 0, 196609, -458750, 0, 196609, -458749, 0, 196609, -458748, 0, 196609, -458747, 0, 196609, -458746, 0, 196609, -458745, 0, 196609, -458744, 0, 196609, -458743, 0, 196612, -327691, 0, 65540, -327690, 0, 196609, -327689, 0, 196609, -327688, 0, 196609, -327687, 0, 196609, -327686, 0, 196609, -327685, 0, 196609, -327684, 0, 196609, -327683, 0, 196609, -327682, 0, 196609, -327681, 0, 196609, -393216, 0, 196609, -393215, 0, 196609, -393214, 0, 196609, -393213, 0, 196609, -393212, 0, 196609, -393211, 0, 196609, -393210, 0, 196609, -393209, 0, 196609, -393208, 0, 196609, -393207, 0, 196612, -262155, 0, 65540, -262154, 0, 196609, -262153, 0, 196609, -262152, 0, 196609, -262151, 0, 196609, -262150, 0, 196609, -262149, 0, 196609, -262148, 0, 196609, -262147, 0, 196609, -262146, 0, 196609, -262145, 0, 196609, -327680, 0, 196609, -327679, 0, 196609, -327678, 0, 196609, -327677, 0, 196609, -327676, 0, 196609, -327675, 0, 196609, -327674, 0, 196609, -327673, 0, 196609, -327672, 0, 196609, -327671, 0, 196612, -196619, 0, 65540, -196618, 0, 196609, -196617, 0, 196609, -196616, 0, 196609, -196615, 0, 196609, -196614, 0, 196609, -196613, 0, 196609, -196612, 0, 196609, -196611, 0, 196609, -196610, 0, 196609, -196609, 0, 196609, -262144, 0, 196609, -262143, 0, 196609, -262142, 0, 196609, -262141, 0, 196609, -262140, 0, 196609, -262139, 0, 196609, -262138, 0, 196609, -262137, 0, 196609, -262136, 0, 196609, -262135, 0, 196612, -131083, 0, 65540, -131082, 0, 196609, -131081, 0, 196609, -131080, 0, 196609, -131079, 0, 196609, -131078, 0, 196609, -131077, 0, 196609, -131076, 0, 196609, -131075, 0, 196609, -131074, 0, 196609, -131073, 0, 196609, -196608, 0, 196609, -196607, 0, 196609, -196606, 0, 196609, -196605, 0, 196609, -196604, 0, 196609, -196603, 0, 196609, -196602, 0, 196609, -196601, 0, 196609, -196600, 0, 196609, -196599, 0, 196612, -65547, 0, 65540, -65546, 0, 196609, -65545, 0, 196609, -65544, 0, 196609, -65543, 0, 196609, -65542, 0, 196609, -65541, 0, 196609, -65540, 0, 196609, -65539, 0, 196609, -65538, 0, 196609, -65537, 0, 196609, -131072, 0, 196609, -131071, 0, 196609, -131070, 0, 196609, -131069, 0, 196609, -131068, 0, 196609, -131067, 0, 196609, -131066, 0, 196609, -131065, 0, 196609, -131064, 0, 196609, -131063, 0, 196612, -11, 0, 65540, -10, 0, 196609, -9, 0, 196609, -8, 0, 196609, -7, 0, 196609, -6, 0, 196609, -5, 0, 196609, -4, 0, 196609, -3, 0, 196609, -2, 0, 196609, -1, 0, 196609, -65536, 0, 196609, -65535, 0, 196609, -65534, 0, 196609, -65533, 0, 196609, -65532, 0, 196609, -65531, 0, 196609, -65530, 0, 196609, -65529, 0, 196609, -65528, 0, 196609, -65527, 0, 196612, 65525, 0, 65540, 65526, 0, 196609, 65527, 0, 196609, 65528, 0, 196609, 65529, 0, 196609, 65530, 0, 196609, 65531, 0, 196609, 65532, 0, 196609, 65533, 0, 196609, 65534, 0, 196609, 65535, 0, 196609, 0, 0, 196609, 1, 0, 196609, 2, 0, 196609, 3, 0, 196609, 4, 0, 196609, 5, 0, 196609, 6, 0, 196609, 7, 0, 196609, 8, 0, 196609, 9, 0, 196612, 131061, 0, 65540, 131062, 0, 196609, 131063, 0, 196609, 131064, 0, 196609, 131065, 0, 196609, 131066, 0, 196609, 131067, 0, 196609, 131068, 0, 196609, 131069, 0, 196609, 131070, 0, 196609, 131071, 0, 196609, 65536, 0, 196609, 65537, 0, 196609, 65538, 0, 196609, 65539, 0, 196609, 65540, 0, 196609, 65541, 0, 196609, 65542, 0, 196609, 65543, 0, 196609, 65544, 0, 196609, 65545, 0, 196612, 196597, 0, 65540, 196598, 0, 196609, 196599, 0, 196609, 196600, 0, 196609, 196601, 0, 196609, 196602, 0, 196609, 196603, 0, 196609, 196604, 0, 196609, 196605, 0, 196609, 196606, 0, 196609, 196607, 0, 196609, 131072, 0, 196609, 131073, 0, 196609, 131074, 0, 196609, 131075, 0, 196609, 131076, 0, 196609, 131077, 0, 196609, 131078, 0, 196609, 131079, 0, 196609, 131080, 0, 196609, 131081, 0, 196612, 262133, 0, 65540, 262134, 0, 196609, 262135, 0, 196609, 262136, 0, 196609, 262137, 0, 196609, 262138, 0, 196609, 262139, 0, 196609, 262140, 0, 196609, 262141, 0, 196609, 262142, 0, 196609, 262143, 0, 196609, 196608, 0, 196609, 196609, 0, 196609, 196610, 0, 196609, 196611, 0, 196609, 196612, 0, 196609, 196613, 0, 196609, 196614, 0, 196609, 196615, 0, 196609, 196616, 0, 196609, 196617, 0, 196612, 327669, 0, 65540, 327670, 0, 196609, 327671, 0, 196609, 327672, 0, 196609, 327673, 0, 196609, 327674, 0, 196609, 327675, 0, 196609, 327676, 0, 196609, 327677, 0, 196609, 327678, 0, 196609, 327679, 0, 196609, 262144, 0, 196609, 262145, 0, 196609, 262146, 0, 196609, 262147, 0, 196609, 262148, 0, 196609, 262149, 0, 196609, 262150, 0, 196609, 262151, 0, 196609, 262152, 0, 196609, 262153, 0, 196612, 393205, 0, 65540, 393206, 0, 196609, 393207, 0, 196609, 393208, 0, 196609, 393209, 0, 196609, 393210, 0, 196609, 393211, 0, 196609, 393212, 0, 196609, 393213, 0, 196609, 393214, 0, 196609, 393215, 0, 196609, 327680, 0, 196609, 327681, 0, 196609, 327682, 0, 196609, 327683, 0, 196609, 327684, 0, 196609, 327685, 0, 196609, 327686, 0, 196609, 327687, 0, 196609, 327688, 0, 196609, 327689, 0, 196612, 458741, 0, 65540, 458742, 0, 196609, 458743, 0, 196609, 458744, 0, 196609, 458745, 0, 196609, 458746, 0, 196609, 458747, 0, 196609, 458748, 0, 196609, 458749, 0, 196609, 458750, 0, 196609, 458751, 0, 196609, 393216, 0, 196609, 393217, 0, 196609, 393218, 0, 196609, 393219, 0, 196609, 393220, 0, 196609, 393221, 0, 196609, 393222, 0, 196609, 393223, 0, 196609, 393224, 0, 196609, 393225, 0, 196612, 524277, 0, 65540, 524278, 0, 196609, 524279, 0, 196609, 524280, 0, 196609, 524281, 0, 196609, 524282, 0, 196609, 524283, 0, 196609, 524284, 0, 196609, 524285, 0, 196609, 524286, 0, 196609, 524287, 0, 196609, 458752, 0, 196609, 458753, 0, 196609, 458754, 0, 196609, 458755, 0, 196609, 458756, 0, 196609, 458757, 0, 196609, 458758, 0, 196609, 458759, 0, 196609, 458760, 0, 196609, 458761, 0, 196612, 589813, 0, 65540, 589814, 0, 196609, 589815, 0, 196609, 589816, 0, 196609, 589817, 0, 196609, 589818, 0, 196609, 589819, 0, 196609, 589820, 0, 196609, 589821, 0, 196609, 589822, 0, 196609, 589823, 0, 196609, 524288, 0, 196609, 524289, 0, 196609, 524290, 0, 196609, 524291, 0, 196609, 524292, 0, 196609, 524293, 0, 196609, 524294, 0, 196609, 524295, 0, 196609, 524296, 0, 196609, 524297, 0, 196612, 655349, 0, 65540, 655350, 0, 196609, 655351, 0, 196609, 655352, 0, 196609, 655353, 0, 196609, 655354, 0, 196609, 655355, 0, 196609, 655356, 0, 196609, 655357, 0, 196609, 655358, 0, 196609, 655359, 0, 196609, 589824, 0, 196609, 589825, 0, 196609, 589826, 0, 196609, 589827, 0, 196609, 589828, 0, 196609, 589829, 0, 196609, 589830, 0, 196609, 589831, 0, 196609, 589832, 0, 196609, 589833, 0, 196612, 720885, 0, 65540, 720886, 0, 196609, 720887, 0, 196609, 720888, 0, 196609, 720889, 0, 196609, 720890, 0, 196609, 720891, 0, 196609, 720892, 0, 196609, 720893, 0, 196609, 720894, 0, 196609, 720895, 0, 196609, 655360, 0, 196609, 655361, 0, 196609, 655362, 0, 196609, 655363, 0, 196609, 655364, 0, 196609, 655365, 0, 196609, 655366, 0, 196609, 655367, 0, 196609, 655368, 0, 196609, 655369, 0, 196612, 786421, 0, 65540, 786422, 0, 196609, 786423, 0, 196609, 786424, 0, 196609, 786425, 0, 196609, 786426, 0, 196609, 786427, 0, 196609, 786428, 0, 196609, 786429, 0, 196609, 786430, 0, 196609, 786431, 0, 196609, 720896, 0, 196609, 720897, 0, 196609, 720898, 0, 196609, 720899, 0, 196609, 720900, 0, 196609, 720901, 0, 196609, 720902, 0, 196609, 720903, 0, 196609, 720904, 0, 196609, 720905, 0, 196612, 851957, 0, 262144, 851958, 0, 262146, 851959, 0, 262146, 851960, 0, 262146, 851961, 0, 262146, 851962, 0, 262146, 851963, 0, 262146, 851964, 0, 262146, 851965, 0, 262146, 851966, 0, 262146, 851967, 0, 262146, 786432, 0, 262146, 786433, 0, 262146, 786434, 0, 262146, 786435, 0, 262146, 786436, 0, 262146, 786437, 0, 262146, 786438, 0, 262146, 786439, 0, 262146, 786440, 0, 262146, 786441, 0, 262148 )

[node name="victim" parent="." instance=ExtResource( 1 )]

[node name="UserInput" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="shield" type="Line2D" parent="UserInput"]
width = 5.0
default_color = Color( 0.0235294, 0.584314, 0.858824, 1 )

[node name="body" type="StaticBody2D" parent="UserInput/shield"]
collision_layer = 8
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="UserInput/shield/body"]
shape = SubResource( 18 )
disabled = true

[node name="spawningPath" type="Path2D" parent="."]
curve = SubResource( 19 )

[node name="spawnLocation" type="PathFollow2D" parent="spawningPath"]
position = Vector2( -160, -192 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="bulletPool" type="Node2D" parent="."]

[node name="elapsedTime" type="Label" parent="."]
margin_left = 104.0
margin_top = -208.0
margin_right = 160.0
margin_bottom = -194.0
text = "00:00:00"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameoverLayer" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameoverLabel" type="Label" parent="gameoverLayer"]
anchor_right = 1.0
margin_left = -48.0
margin_top = -208.0
margin_right = 33.0
margin_bottom = -194.0
text = "Game Over !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameoverButton" type="Button" parent="gameoverLayer"]
margin_left = -64.0
margin_top = 72.0
margin_right = 70.0
margin_bottom = 92.0
shortcut = SubResource( 21 )
text = "back to Main menu"

[node name="scoreTime" type="Label" parent="gameoverLayer"]
pause_mode = 1
margin_left = -160.0
margin_top = -120.0
margin_right = 144.0
margin_bottom = -40.0
text = "00:00:00"
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="dead" from="victim" to="." method="_on_victim_dead"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="pressed" from="gameoverLayer/gameoverButton" to="." method="_on_gameoverButton_pressed"]
